--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "angular-aria": "^1.4.5",
     "angular-material": "^0.11.0",
     "angular-route": "^1.4.5",
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-jwt": "^3.1.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
@@ -23,7 +25,8 @@
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "jade": "~1.11.0",
-    "mongoose": "^4.1.6",
+    "jsonwebtoken": "^5.0.5",
+    "mongoose": "^4.1.7",
     "morgan": "~1.6.1",
     "path": "^0.12.7",
     "serve-favicon": "~2.3.0",
