--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-jwt": "^3.1.0",
+    "express-validator": "^2.17.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
