--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-aria": "^1.4.5",
     "angular-jwt": "0.0.9",
     "angular-material": "^0.11.0",
+    "angular-mocks": "^1.4.6",
     "angular-route": "^1.4.5",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
@@ -28,6 +29,12 @@
     "gulp-util": "^3.0.6",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.0.5",
+    "karma": "^0.13.10",
+    "karma-chai": "^0.1.0",
+    "karma-chai-as-promised": "^0.1.2",
+    "karma-coverage": "^0.5.2",
+    "karma-mocha": "^0.2.0",
+    "karma-sinon-chai": "^1.1.0",
     "mongoose": "^4.1.7",
     "morgan": "~1.6.1",
     "path": "^0.12.7",
