--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "angular-route": "^1.4.5",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
+    "chai": "^3.3.0",
+    "chai-as-promised": "^5.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
