--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
     "angular-aria": "^1.4.5",
     "angular-jwt": "0.0.9",
     "angular-material": "^0.11.0",
-    "angular-mocks": "^1.4.6",
     "angular-route": "^1.4.5",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
-    "chai": "^3.3.0",
-    "chai-as-promised": "^5.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-jwt": "^3.1.0",
     "express-validator": "^2.17.1",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "^5.0.5",
+    "mongoose": "^4.1.7",
+    "morgan": "~1.6.1",
+    "path": "^0.12.7",
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.1.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.4.6",
+    "chai": "^3.3.0",
+    "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
@@ -29,18 +38,14 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^5.0.5",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-coverage": "^0.5.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-hy-html-reporter": "0.0.14",
     "karma-mocha": "^0.2.0",
     "karma-sinon-chai": "^1.1.0",
-    "mongoose": "^4.1.7",
-    "morgan": "~1.6.1",
-    "path": "^0.12.7",
-    "serve-favicon": "~2.3.0",
-    "sqlite3": "^3.1.0"
+    "jasmine-core": "^2.3.4"
   }
 }
