--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
+    "jasmine-core": "^2.3.4",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-coverage": "^0.5.2",
-    "karma-jasmine": "^0.3.6",
     "karma-hy-html-reporter": "0.0.14",
+    "karma-jasmine": "^0.3.6",
     "karma-mocha": "^0.2.0",
-    "karma-sinon-chai": "^1.1.0",
-    "jasmine-core": "^2.3.4"
+    "karma-sinon-chai": "^1.1.0"
   }
 }
